--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ blinker==1.4
 Brlapi==0.8.3
 cachelib==0.10.2
 certifi==2020.6.20
+cffi==1.15.1
 chardet==4.0.0
 cliapp==1.20180812.1
 click==8.0.3
@@ -56,6 +57,7 @@ Pillow==9.0.1
 protobuf==3.12.4
 ptyprocess==0.7.0
 pycairo==1.20.1
+pycparser==2.21
 pycups==2.0.1
 Pygments==2.11.2
 PyGObject==3.42.1
